--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin_page"></activity>
+        <activity android:name=".create_record"></activity>
+        <activity android:name=".all_records" />
+        <activity android:name=".admin_page" />
         <activity android:name=".MainActivity" />
         <activity android:name=".attendance" />
         <activity android:name=".login_page">
